--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ header {
     height: 100%;
     width: 100%;
     min-height: 100vh;
-    background: linear-gradient(245.59deg, #4d9559 0%, #38703d 28.53%, #133917 75.52%);
+    background: linear-gradient(245.59deg, #59ac66 0%, #38703d 28.53%, #123b16 75.52%);
     position: relative;
     display: grid;
     grid-template-columns: repeat(2,1fr);
@@ -97,7 +97,7 @@ section {
 .hero-text a {
     display: inline-block;
     color: white;
-    background: #4d9559;
+    background: #59ac66;
     border: 1px solid transparent;
     padding: 12px 30px;
     line-height: 1.4;
@@ -151,7 +151,7 @@ section {
     padding: 12px;
     font-size: 25px;
     color: white;
-    background: #4d9559;
+    background: #59ac66;
     border-radius: 30px;
     transition: all .50s ease;
 }
@@ -230,7 +230,7 @@ section {
         right: -100%;
         width: 300px;
         height: 40vh;
-        background: #4d9559;
+        background: #59ac66;
         display: flex;
         align-items: center;
         flex-direction: column;
