--- a/css/style.css
+++ b/css/style.css
@@ -230,7 +230,7 @@ section {
         right: -100%;
         width: 300px;
         height: 40vh;
-        background: #59ac66;
+        background: transparent;
         display: flex;
         align-items: center;
         flex-direction: column;
